Add new pages and update info grafis and layanan
Added galeri.html, pengumuman.html, ppid.html, and pengumuman.css for new sections. Updated index.html to use new InfoGrafis images and expanded the 'Sekapur Sirih' section. Updated layanan.html with new links and improved image sizes. Replaced images in images/InfoGrafis, removed images/index_pict, and added a new PDF for Satyalancana requirements. Minor CSS adjustments for layout and text alignment.

--- a/pengumuman.css
+++ b/pengumuman.css
@@ -118,7 +118,6 @@ body {
 .navRight a:hover, .dropdown:hover .dropbtn {
   background-color: white;
   color: black;
-  transition: 0.5s;
 }
 
 .dropdown:hover .dropdown-content{}
@@ -175,142 +174,13 @@ body {
   }
 }
 
-/* ============================================ Layanan BKD ==============================*/
-.layananBKD {
+/* ============================================ Visi Misi ==============================*/
+.pengumuman {
 	background-color: white;
-	overflow: hidden;
 	text-align: center;
-	padding: 20px;
-}
-.layananBKD h1 {
-	font-family: Bahnschrift;
-	text-align: center;
-	font-size: 40px;
+	font-size: 70px;
+	font-family: 'Courier New', Courier, monospace;
 	color: #0077b6;
-	margin-top: 0px;
-}
-.layananBKD .layananKPG {
-	margin-top: 20px;
-}
-.layananBKD .layananPSDM {
-	margin-top: 50px;
-}
-.LogoBKD {
-	width: 200px;
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 600px) {
-	.layananBKD h1{
-		font-family: Bahnschrift;
-		text-align: center;
-		font-size: 30px;
-		color: #0077b6;
-	}
-	.LogoBKD {
-		width: 150px;
-	}
-}
-
-/* ============================================ Layanan BKN ==============================*/
-.layananBKN {
-	background-color: white;
-	/*background-image: url(images//index_pict/1.jpg);
-	background-size: cover;*/
-	overflow: hidden;
-	text-align: center;
-	padding: 20px;
-}
-.layananBKN h1{
-	font-family: Bahnschrift;
-	text-align: center;
-	font-size: 40px;
-	color: #0077b6;
-}
-.LogoBKN {
-	width: 200px;
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 600px) {
-	.layananBKN h1{
-		font-family: Bahnschrift;
-		text-align: center;
-		font-size: 30px;
-		color: #0077b6;
-	}
-	.LogoBKN {
-		width: 150px;
-	}
-}
-
-/* ============================================ FLEX CONTAINER ==============================*/
-* {
-  box-sizing: border-box;
-}
-
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  text-align: center;
-  justify-content: center;
-}
-.flex-container > div {
- margin: 0;
- background-color: #dddddd;
- color: #023e8a;
- line-height: 20px;
- font-family: trebuchet;
- font-size: 20px;
- margin: 10px;
- border-radius: 12px;
- box-shadow: 0px 5px 5px grey;
-}
-.flex-container > div:hover {
-	background-color:  white;
-	box-shadow: 0px 5px 15px grey;
-	cursor: pointer;
-	transition: 0.3s;
-}
-.flex-item-main {
-  flex: 20%;
-}
-.flex-item-main img {
-	
-}
-.flex-item-main img:hover {
-	filter: invert(50%) sepia(1%) saturate(1%) hue-rotate(1deg) brightness(1000%) contrast(80%);
-	transition: 0.3s;
-}
-.flex-item-one {
-  flex: 20%;
-}
-.flex-item-two {
-  flex: 20%;
-}
-.flex-item-three {
-  flex: 20%;
-}
-.flex-item-four {
-  flex: 20%;
-}
-
-.flex-item-main sub, .flex-item-one sub, .flex-item-two sub, .flex-item-three sub, .flex-item-four sub {
-	color: rgb(41, 40, 40);
-	line-height: 0.1;
-	font-size: 15px;
-	padding: 5px;
-}
-/* Responsive layout - makes a one column-layout instead of a two-column layout */
-@media (max-width: 600px) {
-  .flex-item-main, .flex-item-one, .flex-item-two, .flex-item-three, .flex-item-four {
-    flex: 40%;
-  }
-}
-@media (max-width: 800px) {
-  .flex-item-main, .flex-item-one, .flex-item-two, .flex-item-three, .flex-item-four {
-    flex: 30%;
-  }
 }
 
 /* ================================== Footer Complete ======================================== */
@@ -344,6 +214,7 @@ body {
 	width: 40px;
 	margin-right: 10px;
 }
+
 .third {
   width: 20%;
   background-color: #0096c7;
@@ -353,6 +224,7 @@ body {
 	margin-left: 5px;
 	padding-bottom: 20px;
 }
+
 .fourth{
 	width: 22.5%;
 	background-color: #00b4d8;
