--- a/index.css
+++ b/index.css
@@ -224,7 +224,7 @@ body {
 	font-size: 20px;
 	padding-left: 30px;
 	padding-right: 30px;
-	text-align: left;
+	text-align: justify;
 	font-family: SegoeUI;
 }
 .pidato-kaban img {
