--- a/pengumuman.css
+++ b/pengumuman.css
@@ -39,3 +39,9 @@ body {
 	font-family: 'Courier New', Courier, monospace;
 	color: #0077b6;
 }
+
+@media screen and (max-width: 600px) {
+   .pengumuman {
+      font-size: 40px;
+   }
+}
