--- a/historyDiklat.css
+++ b/historyDiklat.css
@@ -114,7 +114,7 @@ body {
     padding-right: 10px;
 } 
 }
-/*============================ FOOTER COMPLETE ============================*/
+/*============================ FOOTER ============================*/
 * {
 	box-sizing: border-box;
 }
