--- a/ppid.css
+++ b/ppid.css
@@ -31,6 +31,154 @@
 body {
 	margin: 0;
 }
+/* =================================== TOP NAV =========================================*/
+.header {
+
+}
+.topnav {
+  position: sticky;
+  top: 0;
+  background-color: #0077b6;
+  height: 65px;
+  box-shadow: 0px 2px 10px 0px black;
+  font-family: Trebuchet;
+}
+.navLogo{
+	float: left;
+}
+.navLogo #bkpsdmdLogo {
+	height: 45px;
+	padding-top: 15px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.navRight {
+	padding-top: 0px;
+	padding-bottom: 0px;
+	background-color: #0077b6;
+	box-shadow: 0px 2px 10px 0px black;
+}
+.navRight a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 25px 20px 20px 20px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a.active {
+  background-color: white;
+  color: black;
+}
+
+.topnav .icon {
+	display: none;
+	padding: 20px 20px 20px 20px;
+}
+
+.dropdown {
+  float: left;
+}
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 24px 20px 20px 20px;
+  background-color: inherit;
+  font-family: inherit;
+}
+
+.dropdown-content {
+  
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 5px 10px 0px black;
+  z-index: 1;
+  overflow: hidden;
+  transition: all 0.5s ease;
+}
+#menu1
+{
+	transition-timing-function: ease;
+}
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 10px 20px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-size: 15px; 
+  min-width: 160px;
+}
+
+.navRight a:hover, .dropdown:hover .dropbtn {
+  background-color: white;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content{}
+.dropdown .dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.show {
+	display: block;
+}
+@media screen and (max-width: 1050px) {
+  .navRight a:not(:empty), .dropdown .dropbtn { 
+	  display: none;
+	}
+  .topnav a.icon {
+	float: right;
+    display: block;
+	top: 0;
+  }
+.show {
+	display: block;
+}
+}
+
+@media screen and (max-width: 1050px) {
+  .topnav.responsive {
+	  position: sticky;
+	  float: left;
+	  width: 100%;
+	}
+  .topnav.responsive .icon {
+	position: absolute;
+	right: 0;
+	top:0;
+  }
+	.topnav.responsive .navRight {
+		padding-top: 70px;
+	}
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {
+	  float: none;
+	}
+  .topnav.responsive .dropdown-content {
+	  position: relative;
+	}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+
 /* ============================================ CONTENT ==============================*/
 .coomingSoon {
 	text-align: center;
@@ -38,4 +186,77 @@ body {
 	font-size: 50px;
 	font-family: Segoe UI;
 	color: #0077b6;
+}
+
+/* =================================== FOOTER =========================================*/
+* {
+	box-sizing: border-box;
+}
+.column {
+	overflow: hidden;
+	float: left;
+	padding: 10px;
+	background-color: #0096c7;
+	color: white;
+	height: 260px;
+	font-family: Raleway-Medium;
+	font-size: 15px;
+}
+.first{
+	width: 22.5%;
+} 
+.first img {
+	width: 100%;
+}
+
+.second {
+ 	width: 35%;
+	text-align: left;
+	background-color: #00b4d8;
+	color: white;
+}
+.second img{
+	width: 40px;
+	margin-right: 10px;
+}
+
+.third {
+  width: 20%;
+  background-color: #0096c7;
+}
+.third img {
+	width: 40px;
+	margin-left: 5px;
+	padding-bottom: 20px;
+}
+
+.fourth {
+	width: 22.5%;
+	background-color: #00b4d8;
+	padding-bottom: 20px;
+	padding-top: 10px;
+}
+.fourth p {
+	text-align: left;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+.fourth img{
+	margin-left: 10%;
+	width: 80%;
+}
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 800px) {
+  .first, .second, .third, .fourth {
+	  width: 100%;
+	  height: auto;
+	}
+	.first img{
+		width: 70%;
+		margin-left: 10%;
+	} .fourth img 
+	{
+		width: 70%;
+		margin-left: 15%;
+	}
 }
